--- a/src/edu/wpi/off/by/one/errors/code/view/MapRootPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/MapRootPane.fxml
@@ -3,7 +3,11 @@
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.StackPane?>
 
 <fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <Label text="Map Pane" AnchorPane.topAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0"/>
+    <StackPane fx:id="mapPane">
+    	<ImageView fx:id="mapView" />
+    </StackPane>
 </fx:root>
