Can display preloaded maps in map dev tool and information about it Can display information about node in node dev tool

--- a/src/edu/wpi/off/by/one/errors/code/view/MenuPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/MenuPane.fxml
@@ -36,12 +36,12 @@
         </BorderPane>
         <AnchorPane fx:id="detailsMenuContainerAnchorPane" maxWidth="235" minWidth="0">
             <children>
-                <SearchMenuPane visible="${searchMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
-                <DirectionsMenuPane visible="${directionsMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
-                <FavoritesMenuPane visible="${favoritesMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
-                <DevToolsMenuPane visible="${devToolMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
-                <SettingsMenuPane visible="${settingsMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
-                <HelpMenuPane visible="${helpMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
+                <SearchMenuPane fx:id="searchMenuPane" visible="${searchMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
+                <DirectionsMenuPane fx:id="directionsMenuPane" visible="${directionsMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
+                <FavoritesMenuPane fx:id="favoritesMenuPane" visible="${favoritesMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
+                <DevToolsMenuPane fx:id="devToolsMenuPane" visible="${devToolMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
+                <SettingsMenuPane fx:id="settingsMenuPane" visible="${settingsMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
+                <HelpMenuPane fx:id="helpMenuPane" visible="${helpMenuRadioButton.selected}" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
             </children>
         </AnchorPane>
     </children>
