--- a/src/edu/wpi/off/by/one/errors/code/view/MainPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/MainPane.fxml
@@ -7,17 +7,17 @@
 
 <fx:root type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <left>
-        <MenuPane maxWidth="275" minWidth="40" />
+        <MenuPane  fx:id="menuPane" maxWidth="275" minWidth="40" />
     </left>
    <center>
       <BorderPane BorderPane.alignment="CENTER">
          <bottom>
-             <NavigationPane prefHeight="150" prefWidth="Infinity" style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;" />
+             <NavigationPane  fx:id="navigationPane" prefHeight="150" prefWidth="Infinity" style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;" />
          </bottom>
          <center>
             <ScrollPane fx:id="mapScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
               <content>
-                <MapRootPane style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;" />
+                <MapRootPane fx:id="mapRootPane" style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;" />
               </content>
             </ScrollPane>
          </center>
