--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
@@ -5,10 +5,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root minWidth="0.0" prefWidth="235" spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minWidth="0.0" prefHeight="357.0" prefWidth="235" spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <Label text="Select a display" />
+      <ChoiceBox fx:id="displayChoiceBox" onAction="#changeDisplay" prefHeight="25.0" prefWidth="222.0" />
+      <Separator prefWidth="200.0" />
       <Label minWidth="0.0" text="Name" />
-      <TextField minWidth="0.0" promptText="Name of the Map" />
+      <TextField fx:id="nameTextField" minWidth="0.0" promptText="Name of the Map" />
       <Label minWidth="0.0" text="Center Coordinates" />
       <GridPane hgap="5.0" minWidth="0.0">
         <columnConstraints>
@@ -28,12 +31,12 @@
                      </padding></Label>
                </left>
                <center>
-                  <TextField minWidth="0.0" promptText="X" BorderPane.alignment="CENTER" />
+                  <TextField minWidth="0.0" promptText="X" BorderPane.alignment="CENTER" fx:id="xTextField" />
                </center>
             </BorderPane>
             <BorderPane minWidth="0.0" GridPane.columnIndex="1">
                <center>
-                  <TextField minWidth="0.0" promptText="Y" BorderPane.alignment="CENTER" />
+                  <TextField fx:id="yTextField" minWidth="0.0" promptText="Y" BorderPane.alignment="CENTER" />
                </center>
                <left>
                   <Label minWidth="0.0" text="Y" BorderPane.alignment="CENTER">
@@ -44,7 +47,7 @@
             </BorderPane>
             <BorderPane minWidth="0.0" GridPane.columnIndex="2">
                <center>
-                  <TextField minWidth="0.0" promptText="Z" BorderPane.alignment="CENTER" />
+                  <TextField fx:id="zTextField" minWidth="0.0" promptText="Z" BorderPane.alignment="CENTER" />
                </center>
                <left>
                   <Label minWidth="0.0" text="Z" BorderPane.alignment="CENTER">
@@ -67,22 +70,22 @@
             <VBox minWidth="0.0" spacing="5.0">
                <children>
                   <Label minWidth="0.0" text="Rotation" />
-                  <TextField minWidth="0.0" promptText="Rotation" />
+                  <TextField fx:id="rotationTextField" minWidth="0.0" promptText="Rotation" />
                </children>
             </VBox>
             <VBox minWidth="0.0" spacing="5.0" GridPane.columnIndex="1">
                <children>
                   <Label minWidth="0.0" text="Scale" />
-                  <TextField minWidth="0.0" promptText="Scale" />
+                  <TextField fx:id="scaleTextField" minWidth="0.0" promptText="Scale" />
                </children>
             </VBox>
          </children>
       </GridPane>
       <Label minWidth="0.0" text="Image Path" />
-      <Label minWidth="0.0" text="~/..." />
+      <Label fx:id="pathLabel" minWidth="0.0" text="~/..." />
       <StackPane minWidth="0.0">
          <children>
-            <Button alignment="TOP_LEFT" contentDisplay="CENTER" minWidth="0.0" mnemonicParsing="false" text="Change" StackPane.alignment="CENTER_RIGHT" />
+            <Button fx:id="changeImageButton" alignment="TOP_LEFT" contentDisplay="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#changeImage" text="Change" StackPane.alignment="CENTER_RIGHT" />
          </children>
       </StackPane>
    </children>
