--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
@@ -9,7 +9,7 @@
    <children>
       <BorderPane minWidth="0.0">
          <left>
-            <Label minWidth="0.0" text="Node ID:" BorderPane.alignment="CENTER" />
+            <Label fx:id="nodeIdLabel" minWidth="0.0" text="Node ID:" BorderPane.alignment="CENTER" />
          </left>
          <center>
             <Label maxWidth="1.7976931348623157E308" minWidth="0.0" text="[NODE_ID]" BorderPane.alignment="CENTER" />
@@ -20,7 +20,7 @@
          <children>
             <BorderPane minWidth="0.0">
                <center>
-                  <TextField minWidth="0.0" promptText="X" BorderPane.alignment="CENTER" />
+                  <TextField fx:id="xTextField" minWidth="0.0" promptText="X" BorderPane.alignment="CENTER" />
                </center>
                <left>
                   <Label minWidth="0.0" text="X" BorderPane.alignment="CENTER">
@@ -32,7 +32,7 @@
             </BorderPane>
             <BorderPane minWidth="0.0" GridPane.columnIndex="1">
                <center>
-                  <TextField minWidth="0.0" promptText="Y" BorderPane.alignment="CENTER" />
+                  <TextField fx:id="yTextField" minWidth="0.0" promptText="Y" BorderPane.alignment="CENTER" />
                </center>
                <left>
                   <Label minWidth="0.0" text="Y" BorderPane.alignment="CENTER">
@@ -44,7 +44,7 @@
             </BorderPane>
             <BorderPane minWidth="0.0" GridPane.columnIndex="2">
                <center>
-                  <TextField minWidth="0.0" promptText="Z" BorderPane.alignment="CENTER" />
+                  <TextField fx:id="zTextField" minWidth="0.0" promptText="Z" BorderPane.alignment="CENTER" />
                </center>
                <left>
                   <Label minWidth="0.0" text="Z" BorderPane.alignment="CENTER">
@@ -67,13 +67,13 @@
       <Label minWidth="0.0" text="Tags:" />
       <BorderPane minWidth="0.0">
          <center>
-            <TextField minWidth="0.0" promptText="Add a Tag" BorderPane.alignment="CENTER" />
+            <TextField fx:id="tagTextField" minWidth="0.0" promptText="Add a Tag" BorderPane.alignment="CENTER" />
          </center>
          <right>
-            <Button minWidth="0.0" mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+            <Button fx:id="addTagButton" minWidth="0.0" mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
          </right>
       </BorderPane>
-      <ListView minWidth="0.0" prefHeight="30.0" />
+      <ListView fx:id="tagListView" minWidth="0.0" prefHeight="30.0" />
       <BorderPane minWidth="0.0">
          <center>
             <BorderPane minWidth="0.0" BorderPane.alignment="CENTER">
@@ -105,7 +105,7 @@
          </right>
       </BorderPane>
       <Label minWidth="0.0" text="Connected Edges" />
-      <ListView minWidth="0.0" prefHeight="30.0" />
+      <ListView fx:id="edgeListView" minWidth="0.0" prefHeight="30.0" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
