--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
@@ -7,8 +7,8 @@
 
 <fx:root minWidth="0.0" prefHeight="357.0" prefWidth="235" spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Select a display" />
-      <ChoiceBox fx:id="displayChoiceBox" prefHeight="25.0" prefWidth="222.0" />
+      <Label text="Select a map" />
+      <ChoiceBox fx:id="mapChoiceBox" prefHeight="25.0" prefWidth="222.0" />
       <Separator prefWidth="200.0" />
       <Label minWidth="0.0" text="Name" />
       <TextField fx:id="nameTextField" minWidth="0.0" promptText="Name of the Map" />
