--- a/src/edu/wpi/off/by/one/errors/code/view/MapRootPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/MapRootPane.fxml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.scene.canvas.*?>
+<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.control.Button?>
+
 <fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <StackPane fx:id="mapPane">
-            <ImageView fx:id="mapView" />
+        <StackPane fx:id="mapPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+         <children>
+            <Canvas fx:id="canvas" height="200.0" width="200.0" />
+            <Pane fx:id="edgeLayer" prefHeight="200.0" prefWidth="200.0" />
+            <StackPane fx:id="nodeLayer" prefHeight="150.0" prefWidth="200.0" />
+            <StackPane fx:id="pathPane" prefHeight="150.0" prefWidth="200.0" />
+         </children>
         </StackPane>
     </children>
 </fx:root>
