--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/EdgeDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/EdgeDevToolPane.fxml
@@ -9,57 +9,59 @@
    <children>
       <BorderPane minWidth="0.0">
          <center>
-            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" text="[EDGE ID]" BorderPane.alignment="CENTER" />
+            <Label fx:id="edgeIDLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" text="[EDGE ID]" BorderPane.alignment="CENTER" />
          </center>
          <left>
-            <Label minWidth="0.0" text="Edge ID" BorderPane.alignment="CENTER" />
+            <Label minWidth="0.0" text="Edge ID:" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets right="10.0" />
+               </BorderPane.margin></Label>
          </left>
       </BorderPane>
-      <GridPane minWidth="0.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="50.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="50.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
+      <HBox prefHeight="0.0" prefWidth="235.0">
          <children>
-            <BorderPane minWidth="0.0">
-               <left>
-                  <Label minWidth="0.0" text="Node A" BorderPane.alignment="CENTER" />
-               </left>
-               <center>
-                  <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" text="[NODE_A_ID]" BorderPane.alignment="CENTER" />
-               </center>
-            </BorderPane>
-            <BorderPane minWidth="0.0" GridPane.columnIndex="1">
-               <left>
-                  <Label minWidth="0.0" text="Node B" BorderPane.alignment="CENTER" />
-               </left>
-               <center>
-                  <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" text="[NODE_B_ID]" BorderPane.alignment="CENTER" />
-               </center>
-            </BorderPane>
+            <Label minWidth="0.0" text="Length:">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin></Label>
+            <Label fx:id="edgeLengthLabel" text="0">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Label>
+            <ChoiceBox minWidth="0.0" prefHeight="25.0" prefWidth="45.0" value="m">
+               <contextMenu>
+                  <ContextMenu>
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="m" />
+                        <MenuItem mnemonicParsing="false" text="in" />
+                    </items>
+                  </ContextMenu>
+               </contextMenu></ChoiceBox>
+         </children>
+      </HBox>
+      <Label text="Tags:" />
+      <GridPane prefHeight="4.0" prefWidth="235.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <CheckBox mnemonicParsing="false" text="Accessible" />
+            <CheckBox mnemonicParsing="false" text="Walkway" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <BorderPane minWidth="0.0">
-         <left>
-            <Label minWidth="0.0" text="Length" BorderPane.alignment="CENTER" />
-         </left>
-         <center>
-            <TextField minWidth="0.0" BorderPane.alignment="CENTER" />
-         </center>
-         <right>
-            <ChoiceBox minWidth="0.0" value="m" BorderPane.alignment="CENTER" />
-         </right>
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
-      </BorderPane>
-      <StackPane minWidth="0.0">
+      <Separator prefWidth="200.0" />
+      <Label text="Connect Edges to Nodes" />
+      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="235.0">
          <children>
-            <Button fx:id="connectEdges" minWidth="0.0" mnemonicParsing="false" onAction="#connectEdgesAction" text="Connect" StackPane.alignment="CENTER_RIGHT" />
+            <Button fx:id="connectEdgesInOrder" minWidth="0.0" mnemonicParsing="false" onAction="#connectEdgesInOrderAction" text="In Order" />
+            <Button fx:id="connectEdgesToFirst" mnemonicParsing="false" onAction="#connectEdgesToFirstAction" text="To Pivot" />
          </children>
-      </StackPane>
+      </HBox>
+      <Label fx:id="addEdgeMessage" alignment="CENTER" prefHeight="17.0" prefWidth="302.0" textAlignment="CENTER" textFill="#bf1616" />
    </children>
 </fx:root>
