--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
@@ -20,7 +20,7 @@
          <children>
             <BorderPane minWidth="0.0">
                <center>
-                  <TextField fx:id="xTextField" minWidth="0.0" promptText="X" BorderPane.alignment="CENTER" />
+                  <TextField minWidth="0.0" promptText="X" BorderPane.alignment="CENTER" fx:id="xTextField" />
                </center>
                <left>
                   <Label minWidth="0.0" text="X" BorderPane.alignment="CENTER">
@@ -65,12 +65,27 @@
          </rowConstraints>
       </GridPane>
       <Label minWidth="0.0" text="Tags:" />
+      <GridPane prefHeight="44.0" prefWidth="235.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <CheckBox mnemonicParsing="false" onAction="#toggleIsBathroom" text="Bathroom" />
+            <CheckBox mnemonicParsing="false" onAction="#toggleIsAccessible" text="Accessibility" GridPane.columnIndex="1" />
+            <CheckBox mnemonicParsing="false" onAction="#toggleIsFood" text="Food" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
       <BorderPane minWidth="0.0">
          <center>
-            <TextField fx:id="tagTextField" minWidth="0.0" promptText="Add a Tag" BorderPane.alignment="CENTER" />
+            <TextField fx:id="tagTextField" minWidth="0.0" promptText="Add Custom Tag" BorderPane.alignment="CENTER" />
          </center>
          <right>
-            <Button fx:id="addTagButton" minWidth="0.0" mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+            <Button fx:id="addTagButton" minWidth="0.0" mnemonicParsing="false" text="Add" BorderPane.alignment="CENTER" />
          </right>
       </BorderPane>
       <ListView fx:id="tagListView" minWidth="0.0" prefHeight="30.0" />
