--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/SearchMenuPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/SearchMenuPane.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
+<?import edu.wpi.off.by.one.errors.code.controller.customcontrols.*?>
 
 <fx:root type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
@@ -21,7 +22,7 @@
             <Label fx:id="searchLabel" maxHeight="40" minWidth="0.0" text="Search" />
             <BorderPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="0.0" prefHeight="30.0">
                <center>
-                  <TextField fx:id="searchInputTextField" maxHeight="-Infinity" minWidth="0.0" prefHeight="30.0" BorderPane.alignment="CENTER" />
+                  <AutoCompleteTextField fx:id="searchField" maxHeight="-Infinity" minWidth="0.0" prefHeight="30.0" BorderPane.alignment="CENTER" />
                </center>
                <right>
                   <Button fx:id="searchLocationButton" minWidth="0.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="Button" BorderPane.alignment="CENTER" />
