Markers are slightly buggy again. Search is functional. Nodes can have names and can save/load them. Started adding nodes to CC for testing

--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/SearchMenuPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/SearchMenuPane.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import edu.wpi.off.by.one.errors.code.controller.customcontrols.*?>
+
 <fx:root type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <ListView fx:id="locationResultListView" minWidth="0.0" BorderPane.alignment="CENTER">
@@ -18,7 +20,7 @@
             <Label fx:id="searchLabel" maxHeight="40" minWidth="0.0" text="Search" />
             <BorderPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="0.0" prefHeight="30.0">
                <center>
-                   <ClearableTextField fx:id="searchField" promptText="Search for Location" maxHeight="-Infinity" minWidth="0.0" prefHeight="30.0" BorderPane.alignment="CENTER" />
+                   <ClearableTextField fx:id="searchField" maxHeight="-Infinity" minWidth="0.0" prefHeight="30.0" promptText="Search for Location" BorderPane.alignment="CENTER" />
                </center>
                <right>
                   <Button fx:id="searchLocationButton" minWidth="0.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="Button" BorderPane.alignment="CENTER" />
@@ -31,8 +33,8 @@
             </ComboBox>
             <HBox prefHeight="0.0" prefWidth="248.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#setDirectionsFrom" text="Directions from Here" />
-                  <Button mnemonicParsing="false" onAction="#setDirectionsTo" prefHeight="25.0" prefWidth="121.0" text="Directions to Here" />
+                  <Button fx:id="fromButton" disable="true" mnemonicParsing="false" onAction="#setDirectionsFrom" prefHeight="25.0" prefWidth="124.0" text="Directions From" />
+                  <Button fx:id="toButton" disable="true" mnemonicParsing="false" onAction="#setDirectionsTo" prefHeight="25.0" prefWidth="125.0" text="Directions To" />
                </children>
             </HBox>
          </children>
