--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
@@ -7,9 +7,11 @@
 <?import edu.wpi.off.by.one.errors.code.controller.customcontrols.ClearableTextField?>
 <fx:root type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+   	  <Label text="Name:" />
+   	  <TextField fx:id="nodeNameTextField" prefWidth="200.0" />
       <BorderPane minWidth="0.0">
          <left>
-            <Label fx:id="nodeIdLabel" minWidth="0.0" text="Node ID:" BorderPane.alignment="CENTER" />
+            <Label fx:id="nodeIdLabel" minWidth="0.0" text="ID:" BorderPane.alignment="CENTER" />
          </left>
          <center>
             <Label maxWidth="1.7976931348623157E308" minWidth="0.0" text="[NODE_ID]" BorderPane.alignment="CENTER" />
