--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
@@ -91,10 +91,28 @@
       <CheckBox fx:id="autoEdgeSelector" contentDisplay="CENTER" mnemonicParsing="false" onAction="#toggleAutoEdge" text="AutoEdge" />
       <ToggleButton fx:id="selectColorButton" mnemonicParsing="false" onAction="#selectColorOnMap" text="Select Color" />
       <Label text="Walkable Color" />
-      <ColorPicker fx:id="walkableColorSelector" onAction="#setWalkableColor">
-         <VBox.margin>
-            <Insets top="-10.0" />
-         </VBox.margin>
-      </ColorPicker>
+      <ScrollPane prefHeight="200.0" prefWidth="200.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="219.0">
+               <children>
+                  <GridPane alignment="CENTER" layoutX="6.0" prefHeight="90.0" prefWidth="213.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <ColorPicker fx:id="walkableColorSelector" onAction="#setWalkableColor" prefHeight="25.0" prefWidth="104.0" />
+                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Add Color" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
    </children>
 </fx:root>
